[project]
name = "pymox_tools"
dynamic = ["version"]
description = "Un module avec plein d'outils utiles pour devs en PyMoX (PY-thon - MO-jo - Flet-X)"
authors = [{ name = "GrCOTE7", email = "GrCOTE7@gmail.com" }]
readme = "README.md"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "python-dotenv",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=77.0.0", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["pymox_tools"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.json"]

[tool.setuptools_scm]
tag_regex = "^v?(?P<version>[0-9]+(\\.[0-9]+)+)$"
write_to = "src/pymox_tools/_version.py"
